hphp/test/zend/bad/ext/spl/tests/bug51532.php
<?php

class A extends SplFileObject {
    public function fscanf($format, &...$vars) {

    }
}
?>
===DONE===
